more CRUD pages
