# libs/openapi/swagger.yaml
@@ -17,6 +17,46 @@ tags:
   - name: Item
     description: operations on items.
 paths:
+  /items:
+    get:
+      tags:
+        - Item
+      summary: Get items
+      description: |
+        This operation retrieves all the item
+      operationId: getItems
+      responses:
+        '200':
+          description: Successfull operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Item'
+        '403':
+          description: Forbidden
+        '404':
+          description: Item not found
+      security: []
+    post:
+      tags:
+        - Item
+      summary: import a set of items
+      description: |
+        This operation adds all the items
+      operationId: importItems
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/Item'
+      responses:
+        '200':
+          description: Successfull operation
+      security: []
   /items/{key}:
     get:
       tags:
@@ -92,7 +132,36 @@ paths:
         '404':
           description: User not found
       security: []
-components: {}
+  /keys:
+    get:
+      tags:
+        - Item
+      summary: Get only keys
+      description: |
+        This operation retrieves all the keys
+      operationId: getKeys
+      responses:
+        '200':
+          description: Successfull operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+      security: []
+components:
+  schemas:
+    Item:
+      type: object
+      properties:
+        key:
+          type: string
+        value:
+          type: object
+      required:
+        - key
+        - value
 x-tagGroups:
   - name: General
     tags:
